--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script>
 
-  <title>Acoso Mediático para todos</title>
+  <title>AMPT</title>
 </head>
 
 <body>
@@ -155,19 +155,33 @@
         <div class="col-md-4">
           <h5>Contacto</h5>
           <ul class="list">
-            <li class="list-item"><ion-icon name="call"></ion-icon></li>
-            <li class="list-item"><ion-icon name="location"></ion-icon></li>
-            <li class="list-item"><ion-icon name="mail"></ion-icon></li>
+            <li class="list-item">
+              <ion-icon name="call"></ion-icon>
+            </li>
+            <li class="list-item">
+              <ion-icon name="location"></ion-icon>
+            </li>
+            <li class="list-item">
+              <ion-icon name="mail"></ion-icon>
+            </li>
           </ul>
         </div>
 
         <div class="col-md-4">
           <h5>Redes Sociales</h5>
           <ul>
-            <li class="list-item"><a href="https://www.instagram.com/?hl=es"><ion-icon name="logo-instagram"></ion-icon></a></li>
-            <li class="list-item"><a href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a></li>
-            <li class="list-item"><a href=""><ion-icon name="logo-youtube"></ion-icon></a></li>
-            <li class="list-item"><a href=""><ion-icon name="logo-facebook"></ion-icon></a></li>
+            <li class="list-item"><a href="https://www.instagram.com/?hl=es">
+                <ion-icon name="logo-instagram"></ion-icon>
+              </a></li>
+            <li class="list-item"><a href="https://twitter.com/">
+                <ion-icon name="logo-twitter"></ion-icon>
+              </a></li>
+            <li class="list-item"><a href="">
+                <ion-icon name="logo-youtube"></ion-icon>
+              </a></li>
+            <li class="list-item"><a href="">
+                <ion-icon name="logo-facebook"></ion-icon>
+              </a></li>
           </ul>
         </div>
 
