actualizado html, css, images

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               </a>
 
             </div>
-            <img src="images/portfolio2.jpg" class="img-fluid" alt="portfolio 2">
+            <img src="images/portfolio9.jpg" class="img-fluid" alt="portfolio 2">
           </div>
         </div>
         <div class="col-md-6">
@@ -143,12 +143,59 @@
       </div>
 
       <div class="text-center topmargin-sm">
-        <p>¿Listo para vivir tu experiencia?</p>
+        <p>¿Preparado para vivir tu experiencia?</p>
         <a href="#" class="text-dark">Solo haznos saber.</a>
       </div>
     </div>
   </section>
 
+  <section id="aboutus" class="bg-light-grey">
+    <div class="container">
+      <div class="content-center">
+        <h2>Ahora manten la calma, <b>estás en buenas manos</b></h2>
+        <p>Ponemos a tu disposición el mejor equipo de seguimiento, trazadores y fotografos. Con el mejor material y
+          equipamiento hasta la fecha. Usando las mejores tecnicas en fisonomía, rastreo y con el horario mas amplio.
+        </p>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          
+          <div class="member-container">
+            <div class="member-details">
+              <h5>Michelle B.Rowe</h5>
+              <span>Directora de Operativos</span>
+              <ul class="list-inline">
+                <li class="list-inline-intem"><a href=https://www.instagram.com/?hl=es"> <ion-icon
+                    name="logo-instagram"></ion-icon>
+                  </a></li>
+                <li class="list-item"><a href="https://twitter.com/">
+                    <ion-icon name="logo-twitter"></ion-icon>
+                  </a></li>
+                <li class="list-item"><a href="">
+                    <ion-icon name="logo-youtube"></ion-icon>
+                  </a></li>
+                <li class="list-item"><a href="">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                  </a></li>
+              </ul>
+            </div>
+            <img src="images/portrait1.jpeg" class="img-fluid" alt="miembro 1">
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <img src="images/portrait2.jpeg" class="img-fluid" alt="miembro 2">
+        </div>
+        <div class="col-md-4">
+          <img src="images/portrait3.jpeg" class="img-fluid" alt="miembro 3">
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <!--
   <section id="footer" class="bg-light-grey">
     <div class="container-fluid">
       <div class="row">
@@ -191,7 +238,7 @@
       </div>
     </div>
   </section>
-
+-->
 
   <!-- Optional JavaScript; choose one of the two! -->
 
