--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </nav>
 
-  <!-- //////////////////////  CONTINUAR DESDE EL MINUTO 46:54 ///////////////////////-->
+  <!-- ////////////////////// 51:26 ///////////////////////-->
   <!-- Sección de la cabecera-->
   <section id="hero">
     <div class="conainer">
@@ -163,7 +163,7 @@
           
           <div class="member-container">
             <div class="member-details">
-              <h5>Michelle B.Rowe</h5>
+              <h5>Michelle B. Rowe</h5>
               <span>Directora de Operativos</span>
               <ul class="list-inline">
                 <li class="list-inline-intem"><a href=https://www.instagram.com/?hl=es"> <ion-icon
@@ -185,10 +185,50 @@
         </div>
 
         <div class="col-md-4">
-          <img src="images/portrait2.jpeg" class="img-fluid" alt="miembro 2">
+          <div class="member-container">
+            <div class="member-details">
+              <h5>Vera G. Higings</h5>
+              <span>CEO</span>
+              <ul class="list-inline">
+                <li class="list-inline-intem"><a href=https://www.instagram.com/?hl=es"> <ion-icon
+                    name="logo-instagram"></ion-icon>
+                  </a></li>
+                <li class="list-item"><a href="https://twitter.com/">
+                    <ion-icon name="logo-twitter"></ion-icon>
+                  </a></li>
+                <li class="list-item"><a href="">
+                    <ion-icon name="logo-youtube"></ion-icon>
+                  </a></li>
+                <li class="list-item"><a href="">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                  </a></li>
+              </ul>
+            </div>
+            <img src="images/portrait2.jpeg" class="img-fluid" alt="miembro 2">
+          </div>
         </div>
         <div class="col-md-4">
-          <img src="images/portrait3.jpeg" class="img-fluid" alt="miembro 3">
+          <div class="member-container">
+            <div class="member-details">
+              <h5>Robert T. Bridges</h5>
+              <span>Lead Photographer</span>
+              <ul class="list-inline">
+                <li class="list-inline-intem"><a href=https://www.instagram.com/?hl=es"> <ion-icon
+                    name="logo-instagram"></ion-icon>
+                  </a></li>
+                <li class="list-item"><a href="https://twitter.com/">
+                    <ion-icon name="logo-twitter"></ion-icon>
+                  </a></li>
+                <li class="list-item"><a href="">
+                    <ion-icon name="logo-youtube"></ion-icon>
+                  </a></li>
+                <li class="list-item"><a href="">
+                    <ion-icon name="logo-facebook"></ion-icon>
+                  </a></li>
+              </ul>
+            </div>
+            <img src="images/portrait3.jpeg" class="img-fluid" alt="miembro 3">
+          </div>
         </div>
       </div>
     </div>
