--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" type="image/png" href="images/solvent.png/">
 
   <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script>
@@ -165,17 +166,17 @@
             <div class="member-details">
               <h5>Michelle B. Rowe</h5>
               <span>Directora de Operativos</span>
-              <ul class="list-inline">
-                <li class="list-inline-intem"><a href=https://www.instagram.com/?hl=es"> <ion-icon
+              <ul class="list-group list-group-horizontal">
+                <li class="list-group-intem"><a href=https://www.instagram.com/?hl=es"> <ion-icon
                     name="logo-instagram"></ion-icon>
                   </a></li>
-                <li class="list-item"><a href="https://twitter.com/">
+                <li class="list-group-intem"><a href="https://twitter.com/">
                     <ion-icon name="logo-twitter"></ion-icon>
                   </a></li>
-                <li class="list-item"><a href="">
+                <li class="list-group-intem"><a href="">
                     <ion-icon name="logo-youtube"></ion-icon>
                   </a></li>
-                <li class="list-item"><a href="">
+                <li class="list-group-intem"><a href="">
                     <ion-icon name="logo-facebook"></ion-icon>
                   </a></li>
               </ul>
@@ -189,17 +190,17 @@
             <div class="member-details">
               <h5>Vera G. Higings</h5>
               <span>CEO</span>
-              <ul class="list-inline">
+              <ul class="list-group list-group-horizontal">
                 <li class="list-inline-intem"><a href=https://www.instagram.com/?hl=es"> <ion-icon
                     name="logo-instagram"></ion-icon>
                   </a></li>
-                <li class="list-item"><a href="https://twitter.com/">
+                <li class="list-group-intem"><a href="https://twitter.com/">
                     <ion-icon name="logo-twitter"></ion-icon>
                   </a></li>
-                <li class="list-item"><a href="">
+                <li class="list-group-intem"><a href="">
                     <ion-icon name="logo-youtube"></ion-icon>
                   </a></li>
-                <li class="list-item"><a href="">
+                <li class="list-group-intem"><a href="">
                     <ion-icon name="logo-facebook"></ion-icon>
                   </a></li>
               </ul>
@@ -212,17 +213,17 @@
             <div class="member-details">
               <h5>Robert T. Bridges</h5>
               <span>Lead Photographer</span>
-              <ul class="list-inline">
+              <ul class="list-group list-group-horizontal">
                 <li class="list-inline-intem"><a href=https://www.instagram.com/?hl=es"> <ion-icon
                     name="logo-instagram"></ion-icon>
                   </a></li>
-                <li class="list-item"><a href="https://twitter.com/">
+                <li class="list-group-intem"><a href="https://twitter.com/">
                     <ion-icon name="logo-twitter"></ion-icon>
                   </a></li>
-                <li class="list-item"><a href="">
+                <li class="list-group-intem"><a href="">
                     <ion-icon name="logo-youtube"></ion-icon>
                   </a></li>
-                <li class="list-item"><a href="">
+                <li class="list-group-intem"><a href="">
                     <ion-icon name="logo-facebook"></ion-icon>
                   </a></li>
               </ul>
@@ -234,51 +235,6 @@
     </div>
 
   </section>
-
-  <!--
-  <section id="footer" class="bg-light-grey">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-4">
-          <h5>Contacto</h5>
-          <ul class="list">
-            <li class="list-item">
-              <ion-icon name="call"></ion-icon>
-            </li>
-            <li class="list-item">
-              <ion-icon name="location"></ion-icon>
-            </li>
-            <li class="list-item">
-              <ion-icon name="mail"></ion-icon>
-            </li>
-          </ul>
-        </div>
-
-        <div class="col-md-4">
-          <h5>Redes Sociales</h5>
-          <ul>
-            <li class="list-item"><a href="https://www.instagram.com/?hl=es">
-                <ion-icon name="logo-instagram"></ion-icon>
-              </a></li>
-            <li class="list-item"><a href="https://twitter.com/">
-                <ion-icon name="logo-twitter"></ion-icon>
-              </a></li>
-            <li class="list-item"><a href="">
-                <ion-icon name="logo-youtube"></ion-icon>
-              </a></li>
-            <li class="list-item"><a href="">
-                <ion-icon name="logo-facebook"></ion-icon>
-              </a></li>
-          </ul>
-        </div>
-
-        <div class="col-md-4">
-          <h5>Copyright</h5>
-        </div>
-      </div>
-    </div>
-  </section>
--->
 
   <!-- Optional JavaScript; choose one of the two! -->
 
