--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link" href="#" id="servicios">Servicios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" id="blog">Blog</a>
+            <a class="nav-link" href="blog.html" id="blog">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" id="about">Sobre Nosotros</a>
