--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="#" id="home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" id="servicios">Servicios</a>
+            <a class="nav-link" href="servicios.html" id="servicios">Servicios</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="blog.html" id="blog">Blog</a>
@@ -154,7 +154,7 @@
     <div class="container">
       <div class="content-center">
         <h2>Ahora manten la calma, <b>estás en buenas manos</b></h2>
-        <p>Ponemos a tu disposición el mejor equipo de seguimiento, trazadores y fotografos. Con el mejor material y
+        <p>Ponemos a tu disposición el mejor equipo de seguimiento, trazadores y fotógrafos. Con el mejor material y
           equipamiento hasta la fecha. Usando las mejores tecnicas en fisonomía, rastreo y con el horario mas amplio.
         </p>
       </div>
@@ -167,7 +167,7 @@
               <h5>Michelle B. Rowe</h5>
               <span>Directora de Operativos</span>
               <ul class="list-group list-group-horizontal">
-                <li class="list-group-intem"><a href=https://www.instagram.com/?hl=es"> <ion-icon
+                <li class="list-group-intem"><a href="https://www.instagram.com/?hl=es"> <ion-icon
                     name="logo-instagram"></ion-icon>
                   </a></li>
                 <li class="list-group-intem"><a href="https://twitter.com/">
@@ -191,7 +191,7 @@
               <h5>Vera G. Higings</h5>
               <span>CEO</span>
               <ul class="list-group list-group-horizontal">
-                <li class="list-inline-intem"><a href=https://www.instagram.com/?hl=es"> <ion-icon
+                <li class="list-inline-intem"><a href="https://www.instagram.com/?hl=es"> <ion-icon
                     name="logo-instagram"></ion-icon>
                   </a></li>
                 <li class="list-group-intem"><a href="https://twitter.com/">
@@ -214,7 +214,7 @@
               <h5>Robert T. Bridges</h5>
               <span>Lead Photographer</span>
               <ul class="list-group list-group-horizontal">
-                <li class="list-inline-intem"><a href=https://www.instagram.com/?hl=es"> <ion-icon
+                <li class="list-inline-intem"><a href="https://www.instagram.com/?hl=es"> <ion-icon
                     name="logo-instagram"></ion-icon>
                   </a></li>
                 <li class="list-group-intem"><a href="https://twitter.com/">
