--- a/servicios.html
+++ b/servicios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <!-- Required meta tags -->
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-    <link href="estilos/styleBlog.css" rel="stylesheet" />
+    <link href="estilos/styleServicios.css" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap"
@@ -21,7 +21,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script>
 
-    <title>AMPT Blog</title>
+    <title>AMPT Servicios</title>
 </head>
 
 <body>
@@ -41,10 +41,10 @@
                         <a class="nav-link" href="index.html" id="home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="servicios.html" id="servicios">Servicios</a>
+                        <a class="nav-link" href="#" id="servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="blog">Blog</a>
+                        <a class="nav-link" href="blog.html" id="blog">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" id="about">Sobre Nosotros</a>
@@ -65,89 +65,111 @@
 
 
     <!-- Sección de la cabecera-->
-    <section id="cabeceraBlog">
+    <section id="cabeceraServicios">
         <div class="conainer">
-            <div class="cabeceraBlog-text topmargin-lg">
-                <h1>BLOG</h1>
-                <p>Articulos de la actualidad.</p>
+            <div class="cabeceraServicios-text topmargin-lg">
+                <h1>SERVICIOS</h1>
+                <p>Promociones y paquetes de servicios a medida</p>
             </div>
         </div>
     </section>
 
-    <!-- Sección de portfolio -->
-    <section id="portfolio">
-        <div class="container-fluid">
+
+
+
+    <!-- Sección de Servicios -->
+    <section class="servicios">
+        <div class="container">
             <div class="content-center">
-                <h2>Articulos relacionados</h2>
-                <p>Te mostramos los ultimos reportajes de actualidad</p>
+                <h2>Precios <b>a tu medida</b></h2>
+                <p>Una amplia gama de paquetes de servicios a medida de cada circunstancia. Construye tu propia
+                    experiencia, modela cada aspecto de lo que buscas vivir y paga usando el modo que te sea mas comodo.
+                </p>
             </div>
-
-
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="portfolio-container">
-                        <div class="portfolio-details">
-                            <a href="#"></a>
-                        </div>
-                        <img src="images/portfolio6.jpeg" class="img-fluid" alt="portfolio 1">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="portfolio-container article-text">
-                        <h2>El riesgo de un freelance</h2>
-                        <p>Ya ha comenzado el verano, y mientras la mayoría se afloja la corbata y se prepara para
-                            disfrutar por fin de las ansiadas vacaciones para otros empieza la temporada alta de
-                            trabajo. Y no, no hablamos de los que se dedican al sector hostelero sino de otro mucho
-                            más exclusivo: el de los paparazzi, esos fotógrafos que, según la RAE, se dedican a
-                            “hacer fotografías a los famosos sin su permiso”.
-
-                            Nosotros nos hemos adentrado en este cerrado reducto de profesionales (como bien hemos
-                            podido comprobar a la hora de elaborar este artículo) para conocer en profundidad qué
-                            tipo de tecnología utilizan en su quedacer diario. Ya sabéis, cómo son las cámaras que
-                            emplean, qué objetivos son sus preferidos y cuáles son los accesorios que no pueden
-                            faltar en su mochila de trabajo.</p><br />
-                        <p>En cualquier caso, a nosotros realmente nos importa muy poco saber quién mueve los hilos
-                            en el mundo del famoseo o cómo hay que hacer para pillar in fraganti a la famosa de
-                            turno para robarle una fotos en topless. Lo que realmente nos interesa es el lado
-                            tecnológico de su trabajo. Leer mas...</p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="portfolio-container article-text">
-                            <h2>Comprar material fotográfico.</h2>
-                            <p>Todos los días llega repetida al blog por los distintos medios la misma pregunta: ¿Qué
-                                cámara me compro? Ojalá pudiéramos responder a todos estos mensajes, pero es imposible.
-                                Por eso Mario tuvo la genialísima idea de crear esta herramienta gratuita que te
-                                recomienda tu cámara ideal en función de tus necesidades. ¿Aún no la has probado?
-
-                                Y no solo eso, sino que también hemos incorporado en el blog otra potentísima
-                                herramienta que incluye una descripción de TODAS las cámaras digitales que hay en el
-                                mercado, vamos, una enciclopedia de cámaras para consultar de forma gratuita.</p><br />
-                            <p>Por supuesto, la cámara es el arma principal de cualquier fotógrafo, sea del tipo que
-                                sea. Y por supuesto nuestros profesionales usan cámaras réflex digitales de objetivos
-                                intercambiables, que garantizan rapidez de enfoque y uso. Curiosamente además, tenemos
-                                un empate entre las dos marcas que dominan el mercado de cámaras fotográficas a nivel
-                                mundial: Canon y Nikon.</p>
-                        
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="portfolio-container">
-                        <div class="portfolio-details">
-                            <a href="#"></a>
-                        </div>
-                        <img src="images/articulo2.jpeg" class="img-fluid" alt="portfolio 4">
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="servicios-container">
+                    <div class="plans plan-light">
+                        <h4>Plan básico</h4>
+                        <h2>150€ <span>/ por día</span></h2>
+                        <h4>Por 1 fotógrafo</h4>
+                        <ul class="topmargin-xs">
+                            <li>Seguimiento de un fotógrafo experto</li>
+                            <li>Pago online</li>
+                            <li>Interacción social</li>
+                            <li>Soporte dedicado</li>
+                        </ul>
+                        <a href="#" class="btn btn-dark full-width topmargin-sm" data-toggle="modal"
+                            data-target="#modal-btn-light">Comienza Ahora</a>
                     </div>
                 </div>
             </div>
-
-            <div class="text-center topmargin-sm">
-                <p>¿Preparado para vivir tu experiencia?</p>
-                <a href="#" class="text-dark">Solo haznos saber.</a>
+            <div class="col-md-6">
+                <div class="servicios-container">
+                    <div class="plans plan-dark">
+                        <h4>Plan Delux</h4>
+                        <h2>399€ <span>/ por día</span></h2>
+                        <h4>Por 3 fotógrafos</h4>
+                        <ul class="topmargin-xs">
+                            <li>Seguimiento de 3 fotógrafos expertos</li>
+                            <li>Pago online</li>
+                            <li>Interacción social</li>
+                            <li>Soporte dedicado</li>
+                        </ul>
+                        <a href="#" class="btn btn-transparent full-width topmargin-sm" data-toggle="modal"
+                            data-target="#modal-btn-dark">Comienza Ahora</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
+
+    <!-- Modal -->
+    <div class="modal fade" id="modal-btn-dark" tabindex="-1" role="dialog" aria-labelledby="modalDelux"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalDelux">Enhorabuena!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Ha elegido el <b>Plan Delux</b>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary">Guardar cambios</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-btn-light" tabindex="-1" role="dialog" aria-labelledby="modalBasico"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalBasico">Enhorabuena!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Ha elegido el <b>Plan básico</b>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary">Guardar cambios</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Sección de footer -->
     <section id="aboutus" class="bg-light-grey">
         <div class="container">
             <div class="content-center">
@@ -167,7 +189,7 @@
                             <h5>Michelle B. Rowe</h5>
                             <span>Directora de Operativos</span>
                             <ul class="list-group list-group-horizontal">
-                                <li class="list-group-intem"><a href='https://www.instagram.com/?hl=es'> <ion-icon
+                                <li class="list-group-intem"><a href="https://www.instagram.com/?hl=es"> <ion-icon
                                         name="logo-instagram"></ion-icon>
                                     </a></li>
                                 <li class="list-group-intem"><a href="https://twitter.com/">
